# miniature-octo-funicular

./: README.md  docker-compose-observability.yml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  worker.py
app/agents/: __init__.py  graph.py  nodes.py  state.py
app/api/: deps.py  middleware.py  schemas.py
app/core/: config.py  llm_client.py  logging.py  models.py
app/evals/: __init__.py  runner.py
app/guardrails/: input_guard.py  output_guard.py
app/observability/: __init__.py  audit.py  audit_writer.py  metrics.py  tracer.py  tracing.py
app/rag/: ingestion.py  pipeline.py  reranker.py  vectorstore.py
app/services/: evaluation.py  ingestion.py  rag_chain.py  vector_store.py
config/: settings.py
data/: audit_logs.jsonl  benchmark_seed.jsonl
data/eval_reports/: ragas_benchmark_20260412_205335.json  ragas_benchmark_20260413_063543.json  ragas_benchmark_20260413_065206.json  ragas_benchmark_20260413_070120.json  ragas_benchmark_20260413_071703.json  ragas_benchmark_20260413_073802.json  ragas_benchmark_20260413_074001.json  ragas_benchmark_20260413_075453.json  ragas_benchmark_20260413_081128.json  ragas_benchmark_20260413_081559.json  ragas_benchmark_20260413_082118.json  ragas_benchmark_20260413_082329.json  ragas_benchmark_20260413_094435.json  ragas_benchmark_20260413_094655.json  ragas_benchmark_20260413_095635.json  ragas_benchmark_20260413_095820.json  ragas_benchmark_20260413_101931.json  ragas_benchmark_20260413_102307.json  ragas_benchmark_20260413_110206.json  (+8 more)
scripts/: run_ragas_benchmark.py
(+6 files in other folders)
